tyopgraphy and layout edits

--- a/results.html
+++ b/results.html
@@ -38,52 +38,65 @@
             </div>
         </nav>
     </div>
-<!-- body content -->
-        <div class="container">
-                <div class="row" id="signintext">
-                    <div class="col-3"></div>
-                    <div class="col-6">
-                            <h4>you searched:</h4>
-                            <h1><span id="display-city-state">location here</span></h1>
-                            <p>number of results:</p>
-                    </div>
-                    <div class="col-3"></div>
-                </div>
-
-                <div class="row" id="bodycontent">
-                    <div class=col-1></div>
-                    <div class=col-10>
-                    <div class="card-deck">
-                        <div class="card">
-                            <img class="card-img-top" src="..." alt="Card image cap">
-                                <div class="card-body">
-                                    <h5 class="card-title">Hike 3</h5>
-                                        <p class="card-text">text text text</p>
-                                        <p class="card-text"><small class="text-muted">rating:</small></p>
-                                </div>
-                        </div>
-                        <div class="card">
-                            <img class="card-img-top" src="..." alt="Card image cap">
-                                <div class="card-body">
-                                    <h5 class="card-title">Hike 2</h5>
-                                        <p class="card-text">text text text</p>
-                                        <p class="card-text"><small class="text-muted">rating:</small></p>
-                                </div>
-                        </div>
-                        <div class="card">
-                            <img class="card-img-top" src="..." alt="Card image cap">
-                                <div class="card-body">
-                                    <h5 class="card-title">Hike 1</h5>
-                                        <p class="card-text">text text text</p>
-                                        <p class="card-text"><small class="text-muted">rating:</small></p>
-                                </div>
-                        </div>
-                    </div>
-                    <div class=col-1></div>
-                </div>
+    <!-- body content -->
+    <div class="container">
+        <div class="row justify-content-center" id="signintext">
+            <div class="col">
+                <h4>you searched</h4>
+                <h1>
+                    <span id="display-city-state">location here</span>
+                </h1>
+                <p>number of results:</p>
+            </div>
         </div>
-<!-- footer -->
-<div class="footer fixed-bottom">
+
+        <div class="row justify-content-center" id="bodycontent">
+            <div class=col>
+                <div class="card-deck">
+                    <div class="card">
+                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Hike 3</h5>
+                            <p class="card-text">text text text</p>
+                            <p class="card-text">
+                                <small class="text-muted">rating:</small>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Hike 2</h5>
+                            <p class="card-text">text text text</p>
+                            <p class="card-text">
+                                <small class="text-muted">rating:</small>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Hike 1</h5>
+                            <p class="card-text">text text text</p>
+                            <p class="card-text">
+                                <small class="text-muted">rating:</small>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- start new search area -->
+        <div class="row justify-content-center" id="returnSearch">
+            <div class="col-sm-12 col-md-4 text-center">
+                <a href="search.html">
+                    <button type="submit" id="" class="py-2 btn yellowbutton container-fluid">New Search</button>
+                </a>
+            </div>
+        </div>
+    </div>
+    <!-- footer -->
+    <div class="footer fixed-bottom">
         <div class="card-footer text-muted" id="footer">
             <div class=foot>&copy;2018 WAAG TECHNOLOGY AND DESIGN GROUP</div>
         </div>
