made some more changes to html for singlersult page

--- a/singleresult.html
+++ b/singleresult.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <!-- Header -->
-    <div class="container-fluid px-0 mb-5 bg-offwhite">
+    <div class="container-fluid px-0 bg-offwhite">
         <nav class="navbar navbar-expand-sm navbar-light bg-offwhite container">
             <div class="mr-auto">
                 <a class="navbar-brand" href="https://placeholder.com">
@@ -38,9 +38,10 @@
         </nav>
     </div>
 <!-- Body -->
-    <div class="row">
+<div id="topimage">
         <img src="https://images.pexels.com/photos/34511/norway-mountain-sky-blue.jpg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="hikeimage" alt"hiking image">
-    </div>
+</div>
+<div class="container" id="bodycontent">
     <div class="row" id="signintext">
         <div class="col"></div>
         <div class="col-8">
@@ -49,6 +50,17 @@
         </div>
         <div class="col"></div>
     </div>
+    <div class="row">
+        <div class="col-6">
+                <ul class="list list-group-flush" id="hikestats">
+                        <li class="list-group-item" id="rating">Rating:</li>
+                        <li class="list-group-item">Length:</li>
+                        <li class="list-group-item">Weather:</li>
+                        <li class="list-group-item">Location:</li>
+                </ul>
+        </div>
+    </div>
+</div>
 <!-- Footer -->
     <div class="footer fixed-bottom">
         <div class="card-footer text-muted" id="footer">
