--- a/signin.html
+++ b/signin.html
@@ -21,7 +21,7 @@
 </head>
 
 
-<body>
+<body class="overlay">
     <!-- Header -->
     <div class="container-fluid px-0 mb-5 bg-offwhite">
         <nav class="navbar navbar-expand-sm navbar-light bg-offwhite container">
