--- a/singleresult.html
+++ b/singleresult.html
@@ -45,7 +45,7 @@
     <div class="row" id="signintext">
         <div class="col"></div>
         <div class="col-8">
-            <h1>name of hike here</h1>
+            <h1><span id="selected-hike-name"></span>name of hike here</h1>
             <p>hike description. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem perferendis autem unde sed quidem. Mollitia natus hic error ex odio earum quo aut nobis esse! Cupiditate vitae ut quos soluta.</p>
         </div>
         <div class="col"></div>
