Connected the pages through the buttons

--- a/search.html
+++ b/search.html
@@ -113,7 +113,7 @@
                         <label for="zipcode">Zipcode</label>
                         <input type="zipcode" class="form-control" id="zipcode" placeholder="Enter zipcode here">
                     </div>
-                    <button type="submit" id="searchtrails" class="btn px-5 navybutton">Search Trails</button>
+                    <button type="submit" id="searchtrails" class="btn px-5 navybutton" onclick="window.open('https://grantposell.github.io/waag/results.html')">Search Trails</button>
             </div>
         </div>
     </div>
