--- a/singleresult.html
+++ b/singleresult.html
@@ -46,7 +46,7 @@
         <div class="col"></div>
         <div class="col-8">
             <h1><span id="selected-hike-name"></span>name of hike here</h1>
-            <p>hike description. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem perferendis autem unde sed quidem. Mollitia natus hic error ex odio earum quo aut nobis esse! Cupiditate vitae ut quos soluta.</p>
+            <p><span id="selected-hike-description"></span>hike description. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem perferendis autem unde sed quidem. Mollitia natus hic error ex odio earum quo aut nobis esse! Cupiditate vitae ut quos soluta.</p>
         </div>
         <div class="col"></div>
     </div>
