--- a/results.html
+++ b/results.html
@@ -90,7 +90,7 @@
         <div class="row justify-content-center" id="returnSearch">
             <div class="col-sm-12 col-md-4 text-center">
                 <a href="search.html">
-                    <button type="submit" id="" class="py-2 btn yellowbutton container-fluid">New Search</button>
+                    <button type="submit" id="" class="py-2 btn yellowbutton container-fluid" onclick="window.open('https://grantposell.github.io/waag/search.html')">New Search</button>
                 </a>
             </div>
         </div>
