--- a/singleresult.html
+++ b/singleresult.html
@@ -19,13 +19,14 @@
     <link href="https://fonts.googleapis.com/css?family=Anton|Damion|Signika:600" rel="stylesheet">
     <title>Take-A-Hike</title>
 </head>
+
 <body>
     <!-- Header -->
     <div class="container-fluid px-0 mb-5 bg-offwhite">
         <nav class="navbar navbar-expand-sm navbar-light bg-offwhite container">
             <div class="mr-auto">
-                <a class="navbar-brand" href="https://placeholder.com">
-                    <img src="http://via.placeholder.com/200x60" href="#">
+                <a class="navbar-brand logo">
+                    <img src="./assets/images/takeahike-logo-06.svg" href="signin.html">
                 </a>
             </div>
             <div class="" id="navbarSupportedContent">
@@ -37,21 +38,23 @@
             </div>
         </nav>
     </div>
-<!-- Body -->
+    <!-- Body -->
     <div class="row">
-        <img src="https://images.pexels.com/photos/34511/norway-mountain-sky-blue.jpg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="hikeimage" alt"hiking image">
+        <img src="https://images.pexels.com/photos/34511/norway-mountain-sky-blue.jpg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+            class="hikeimage" alt "hiking image">
     </div>
     <div class="row" id="signintext">
         <div class="col"></div>
         <div class="col-8">
             <h1>name of hike here</h1>
-            <p>hike description. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem perferendis autem unde sed quidem. Mollitia natus hic error ex odio earum quo aut nobis esse! Cupiditate vitae ut quos soluta.</p>
+            <p>hike description. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem perferendis autem unde sed
+                quidem. Mollitia natus hic error ex odio earum quo aut nobis esse! Cupiditate vitae ut quos soluta.</p>
         </div>
         <div class="col"></div>
     </div>
     <div class="col" id="map">
     </div>
-<!-- Footer -->
+    <!-- Footer -->
     <div class="footer fixed-bottom">
         <div class="card-footer text-muted" id="footer">
             <div class=foot>&copy;2018 WAAG TECHNOLOGY AND DESIGN GROUP</div>
