--- a/signin.html
+++ b/signin.html
@@ -26,8 +26,8 @@
     <div class="container-fluid px-0 mb-5 bg-offwhite">
         <nav class="navbar navbar-expand-sm navbar-light bg-offwhite container">
             <div class="mr-auto">
-                <a class="navbar-brand" href="https://placeholder.com">
-                    <img src="http://via.placeholder.com/200x60" href="#">
+                <a class="navbar-brand logo">
+                    <img src="./assets/images/takeahike-logo-06.svg" href="signin.html">
                 </a>
             </div>
             <div class="" id="navbarSupportedContent">
