fixed logo link

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <div class="col">
                 <nav class="navbar navbar-expand-sm navbar-light bg-light px-0 py-0">
                     <div class="mr-auto">
-                        <a class="navbar-brand px-0 py-0" href="https://placeholder.com">
-                            <img src="http://via.placeholder.com/200x75" href="#">
+                        <a class="navbar-brand logo" href="signin.html">
+                            <img src="./assets/images/takeahike-logo-06.svg">
                         </a>
                     </div>
                     <div class="" id="navbarSupportedContent">
