--- a/singleresult.html
+++ b/singleresult.html
@@ -25,8 +25,8 @@
     <div class="container-fluid px-0 bg-offwhite">
         <nav class="navbar navbar-expand-sm navbar-light bg-offwhite container">
             <div class="mr-auto">
-                <a class="navbar-brand logo">
-                    <img src="./assets/images/takeahike-logo-06.svg" href="signin.html">
+                <a class="navbar-brand logo" href="signin.html">
+                    <img src="./assets/images/takeahike-logo-06.svg">
                 </a>
             </div>
             <div class="" id="navbarSupportedContent">
@@ -39,31 +39,36 @@
         </nav>
     </div>
 
-<!-- Body -->
-<div id="topimage">
-        <img src="https://images.pexels.com/photos/34511/norway-mountain-sky-blue.jpg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="hikeimage" alt"hiking image">
-</div>
-<div class="container" id="bodycontent">
-    <div class="row" id="signintext">
-        <div class="col"></div>
-        <div class="col-8">
-            <h1><span id="selected-hike-name"></span>name of hike here</h1>
-            <p><span id="selected-hike-description"></span>hike description. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem perferendis autem unde sed quidem. Mollitia natus hic error ex odio earum quo aut nobis esse! Cupiditate vitae ut quos soluta.</p>
+    <!-- Body -->
+    <div id="topimage">
+        <img src="https://images.pexels.com/photos/34511/norway-mountain-sky-blue.jpg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+            class="hikeimage" alt "hiking image">
+    </div>
+    <div class="container" id="bodycontent">
+        <div class="row" id="signintext">
+            <div class="col"></div>
+            <div class="col-8">
+                <h1>
+                    <span id="selected-hike-name"></span>name of hike here</h1>
+                <p>
+                    <span id="selected-hike-description"></span>hike description. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem perferendis
+                    autem unde sed quidem. Mollitia natus hic error ex odio earum quo aut nobis esse! Cupiditate vitae ut
+                    quos soluta.</p>
 
+            </div>
+            <div class="col"></div>
         </div>
-        <div class="col"></div>
-    </div>
-    <div class="row">
-        <div class="col-6">
+        <div class="row">
+            <div class="col-6">
                 <ul class="list list-group-flush" id="hikestats">
-                        <li class="list-group-item" id="rating">Rating:</li>
-                        <li class="list-group-item">Length:</li>
-                        <li class="list-group-item">Weather:</li>
-                        <li class="list-group-item">Location:</li>
+                    <li class="list-group-item" id="rating">Rating:</li>
+                    <li class="list-group-item">Length:</li>
+                    <li class="list-group-item">Weather:</li>
+                    <li class="list-group-item">Location:</li>
                 </ul>
+            </div>
         </div>
     </div>
-</div>
     <div class="col" id="map">
     </div>
     <!-- Footer -->
