--- a/results.html
+++ b/results.html
@@ -25,8 +25,8 @@
     <div class="container-fluid px-0 mb-5 bg-offwhite">
         <nav class="navbar navbar-expand-sm navbar-light bg-offwhite container">
             <div class="mr-auto">
-                <a class="navbar-brand logo">
-                    <img src="./assets/images/takeahike-logo-06.svg" href="signin.html">
+                <a class="navbar-brand logo" href="signin.html">
+                    <img src="./assets/images/takeahike-logo-06.svg">
                 </a>
             </div>
             <div class="" id="navbarSupportedContent">
