adjusting element placement, added correct body content

--- a/singleresult.html
+++ b/singleresult.html
@@ -50,7 +50,7 @@
         </div>
         <div class="col"></div>
     </div>
-    <div class="row">
+    <div class="row justify-content-center">
         <div class="col-6">
                 <ul class="list list-group-flush" id="hikestats">
                         <li class="list-group-item" id="rating">Rating:</li>
