adjusted padding and justify content

--- a/singleresult.html
+++ b/singleresult.html
@@ -45,11 +45,10 @@
             class="hikeimage" alt "hiking image">
     </div>
     <div class="row justify-content-center">
-        <div class="col-6">
+        <div class="col-10">
     <div class="container" id="bodycontent">
-        <div class="row" id="signintext">
-            <div class="col"></div>
-            <div class="col-8">
+        <div class="row justify-content-center" id="signintext">
+            <div class="col-10 text-left">
                 <h1>
                     <span id="selected-hike-name"></span>name of hike here</h1>
                 <p>
@@ -58,15 +57,14 @@
                     quos soluta.</p>
 
             </div>
-            <div class="col"></div>
         </div>
         <div class="row justify-content-center">
-            <div class="col-6">
+            <div class="col-10 ">
                 <ul class="list list-group-flush" id="hikestats">
-                    <li class="list-group-item" id="rating">Rating:</li>
-                    <li class="list-group-item">Length:</li>
-                    <li class="list-group-item">Weather:</li>
-                    <li class="list-group-item">Location:</li>
+                    <li class="list-group-item pl-0" id="rating">Rating:</li>
+                    <li class="list-group-item pl-0">Length:</li>
+                    <li class="list-group-item pl-0">Weather:</li>
+                    <li class="list-group-item pl-0">Location:</li>
                 </ul>
             </div>
         </div>
