layout on the indiviual resutls tinkering

--- a/singleresult.html
+++ b/singleresult.html
@@ -22,7 +22,7 @@
 
 <body>
     <!-- Header -->
-    <div class="container-fluid px-0 bg-offwhite">
+    <div class="container-fluid px-0 bg-offwhite ">
         <nav class="navbar navbar-expand-sm navbar-light bg-offwhite container">
             <div class="mr-auto">
                 <a class="navbar-brand logo" href="signin.html">
@@ -40,15 +40,15 @@
     </div>
 
     <!-- Body -->
-    <div id="topimage">
+    <div id="topimage ">
         <img src="https://images.pexels.com/photos/34511/norway-mountain-sky-blue.jpg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
             class="hikeimage" alt "hiking image">
     </div>
-    <div class="row justify-content-center">
-        <div class="col-10">
+    <div class="row justify-content-center mt-5">
+        <div class="col-sm-12 col-md-10">
     <div class="container" id="bodycontent">
         <div class="row justify-content-center" id="signintext">
-            <div class="col-10 text-left">
+            <div class="col-sm-12 col-md-10 text-left">
                 <h1>
                     <span id="selected-hike-name"></span>name of hike here</h1>
                 <p>
@@ -59,7 +59,7 @@
             </div>
         </div>
         <div class="row justify-content-center">
-            <div class="col-10 ">
+            <div class="col-sm-12 col-md-10 ">
                 <ul class="list list-group-flush" id="hikestats">
                     <li class="list-group-item pl-0" id="rating">Rating:</li>
                     <li class="list-group-item pl-0">Length:</li>
