--- a/search.html
+++ b/search.html
@@ -109,7 +109,7 @@
                             <option>Wyoming</option>
                         </select>
                     </div>
-                    <button type="submit" id="searchtrails" class="btn px-5 navybutton">Search Trails</button>
+                    <button type="submit" id="searchtrails" class="btn px-5 navybutton" onclick="window.open('https://grantposell.github.io/waag/results.html')">Search Trails</button>
             </div>
         </div>
     </div>
