fixed the background image on individual results page

--- a/singleresult.html
+++ b/singleresult.html
@@ -40,10 +40,13 @@
     </div>
 
     <!-- Body -->
-    <div id="topimage ">
+    <!-- <div id="topimage ">
         <img src="https://images.pexels.com/photos/34511/norway-mountain-sky-blue.jpg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
             class="hikeimage" alt "hiking image">
-    </div>
+    </div> -->
+    <div class="jumbotron jumbotron-fluid" id="heroimage">
+        <!-- <div class="container"></div> -->
+      </div>
     <div class="row justify-content-center mt-5">
         <div class="col-sm-12 col-md-10">
     <div class="container" id="bodycontent">
