--- a/search.html
+++ b/search.html
@@ -120,6 +120,51 @@
             </div>
         </div>
     </div>
+    <div class="container">
+        <div class="row justify-content-center searchresults" id="bodyresults">
+            <div class=col>
+                <div class="card-deck">
+                    <div class="card">
+                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Hike 3</h5>
+                            <p class="card-text">text text text</p>
+                            <p class="card-text">
+                                <small class="text-muted">rating:</small>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Hike 2</h5>
+                            <p class="card-text">text text text</p>
+                            <p class="card-text">
+                                <small class="text-muted">rating:</small>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Hike 1</h5>
+                            <p class="card-text">text text text</p>
+                            <p class="card-text">
+                                <small class="text-muted">rating:</small>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- start new search area -->
+        <div class="row justify-content-center searchresults" id="returnSearch">
+            <div class="col-sm-12 col-md-4 text-center">
+                <a href="search.html">
+                    <button type="submit" id="" class="py-2 btn yellowbutton container-fluid" onclick="window.open('https://grantposell.github.io/waag/search.html')">New Search</button>
+                </a>
+            </div>
+        </div>
     </div>
     <!-- footer -->
     <div class="footer fixed-bottom">
