printing but not in a card

--- a/search.html
+++ b/search.html
@@ -120,7 +120,7 @@
             </div>
         </div>
     </div>
-    <div class="container">
+    <!-- <div class="container">
         <div class="row justify-content-center searchresults" id="bodyresults">
             <div class=col>
                 <div class="card-deck">
@@ -157,15 +157,17 @@
                 </div>
             </div>
         </div>
-        <!-- start new search area -->
-        <div class="row justify-content-center searchresults" id="returnSearch">
+        <!-- start new search area-->
+        <!-- <div class="row justify-content-center searchresults" id="returnSearch">
             <div class="col-sm-12 col-md-4 text-center">
                 <a href="search.html">
-                    <button type="submit" id="" class="py-2 btn yellowbutton container-fluid" onclick="window.open('https://grantposell.github.io/waag/search.html')">New Search</button>
+                    <button type="submit" id="" class="py-2 btn yellowbutton container-fluid">New Search</button>
                 </a>
             </div>
         </div>
-    </div>
+
+    </div> --> 
+    <span id="newsearchresults"></span>
     <!-- footer -->
     <div class="footer fixed-bottom">
         <div class="card-footer text-muted" id="footer">
