Corrected HTML col width and limited for loop to 3

--- a/search.html
+++ b/search.html
@@ -122,7 +122,9 @@
     </div>
     <div class="container">
         <div class="row justify-content-center searchresults">
-            <div class="col-md-12" class="card-deck" id="bodyresults">
+            <div class="col-md-12">
+                <div class="card-deck" id="bodyresults">
+                </div>
             </div>
         </div>
         <!-- start new search area-->
@@ -134,18 +136,18 @@
             </div>
         </div>
 
-    </div> --> 
-    <!-- footer -->
-    <div class="footer fixed-bottom">
-        <div class="card-footer text-muted" id="footer">
-            <div class=foot>&copy;2018 WAAG TECHNOLOGY AND DESIGN GROUP</div>
+    </div> -->
+        <!-- footer -->
+        <div class="footer fixed-bottom">
+            <div class="card-footer text-muted" id="footer">
+                <div class=foot>&copy;2018 WAAG TECHNOLOGY AND DESIGN GROUP</div>
+            </div>
         </div>
-    </div>
 
-    <!-- google api -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGqySJr47rVKYnN2R2UvMM4YDKlRP691c&libraries=places" async
-        defer></script>
-    <script src="./assets/javascript/app.js"></script>
+        <!-- google api -->
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGqySJr47rVKYnN2R2UvMM4YDKlRP691c&libraries=places" async
+            defer></script>
+        <script src="./assets/javascript/app.js"></script>
 
 </body>
 
