--- a/search.html
+++ b/search.html
@@ -122,7 +122,7 @@
     </div>
     <div class="container">
         <div class="row justify-content-center searchresults">
-            <div class="col-md-12"
+            <div class="col-md-12">
                 <div class="card-deck" id="bodyresults">
                 </div>
             </div>
