Added clear button to clear results

--- a/search.html
+++ b/search.html
@@ -117,6 +117,7 @@
                         </select>
                     </div>
                     <button type="submit" id="searchtrails" class="btn px-5 navybutton">Search Trails</button>
+                    <button type="submit" id="newsearch" class="btn px-5 navybutton">New Search</button>
             </div>
         </div>
     </div>
@@ -134,19 +135,21 @@
                     <button type="submit" id="" class="py-2 btn yellowbutton container-fluid">New Search</button>
                 </a>
             </div>
-        </div>
-    </div> -->
-        <!-- footer -->
-        <div class="footer fixed-bottom">
-            <div class="card-footer text-muted" id="footer">
-                <div class=foot>&copy;2018 WAAG TECHNOLOGY AND DESIGN GROUP</div>
-            </div>
-        </div>
+        </div>-->
+    </div>
 
-        <!-- google api -->
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGqySJr47rVKYnN2R2UvMM4YDKlRP691c&libraries=places" async
-            defer></script>
-        <script src="./assets/javascript/app.js"></script>
+
+    <!-- footer -->
+    <div class="footer fixed-bottom">
+        <div class="card-footer text-muted" id="footer">
+            <div class=foot>&copy;2018 WAAG TECHNOLOGY AND DESIGN GROUP</div>
+        </div>
+    </div>
+
+    <!-- google api -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGqySJr47rVKYnN2R2UvMM4YDKlRP691c&libraries=places" async
+        defer></script>
+    <script src="./assets/javascript/app.js"></script>
 
 </body>
 
